# MIMO_Connect

./: .env.example  .gitattributes  .gitignore  CONTEXT.md  LICENSE  MIMO_Connect-cli.spec  MIMO_Connect.spec  README.md  __init__.py  _tmp.py  app_main.py  build_linux_cli.sh  cli_main.py  config.yaml  first_run.bat  gui_main.py  install.sh  main.py  mmc  mmc.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup_and_run.bat  start_mmc.bat
agent/: __init__.py  mimo_code.py
core/: __init__.py  config_io.py  daemon.py  engine.py  intent_router.py  interfaces.py  progress_summarizer.py  registry.py  segment_parser.py  segment_rewriter.py  term.py  voice_condenser.py
docs/: VVM策划.markdown  WINDOWS_TTS_GUIDE.md  gotchas.md
docs/adr/: 0001-middleware-command-routing.md  0002-mimo-permission-scope.md  (+1 more)
examples/: windows_tts_example.py
gui/: __init__.py  app.py  engine_runner.py  i18n.py  log_view.py  onboarding.py  settings.py  theme.py  tray.py
scripts/: __init__.py  _terminal.py  first_run_setup.py  obsidian_sync.py  reconcile_memory.bat  reconcile_memory.py  setup_reconcile_task.ps1
tests/: conftest.py  test_approve_without_context.py  test_config_draft.py  test_daemon_cli.py  test_e2e_pipeline.py  test_engine_collector.py  test_engine_passthrough.py  test_extract_options.py  test_gui_logic.py  test_interrupt_vs_question.py  test_mimo_permission.py  test_option_free_text.py  test_progress_summarizer.py  test_segment_parser.py  test_segment_rewrite_engine.py  test_step_text_classification.py
voice/: __init__.py  edge_tts.py
