[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mimo-connect"
version = "0.1.0"
description = "Voice/chat middleware that lets a chat platform control MiMo Code CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.24",
    "langchain-core>=0.1",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
feishu = ["lark-oapi>=1.0"]
weixin = ["pycryptodome>=3.10"]
voice = ["edge-tts>=6.1", "pywin32>=306; sys_platform == 'win32'"]

[project.scripts]
mmc = "app_main:main"
mimo-connect = "app_main:main"

[tool.setuptools.packages.find]
include = ["core*", "agent*", "platforms*", "voice*", "gui*", "scripts*"]
